# mini-amazon

./: CMakeLists.txt  Makefile  README.md  Rapport_Projet.docx  main.cpp  registered_bill.txt  store
include/: Cart.h  Clothes.h  InformaticsEquipment.h  KitchenEquipment.h  Others.h  Product.h  Store.h
src/: Cart.cpp  Clothes.cpp  InformaticsEquipment.cpp  KitchenEquipment.cpp  Others.cpp  Product.cpp  Store.cpp
